RESOLVED FIXED282749
[GStreamer] Video dimensions are wrong since GStreamer 1.24.9
https://bugs.webkit.org/show_bug.cgi?id=282749
Summary [GStreamer] Video dimensions are wrong since GStreamer 1.24.9
Theo
Reported 2024-11-07 01:54:49 PST
Hello, This commit from GStreamer 1.24 branch 7e438dfaa7cc6877e70d139451dfcc5e4e6b4756, makes WPEWebkit drop the stream-collection because it comes from decodebin3 now and not webkit source element anymore As a result, updateTracks is never called and the video dimensions never updated You can reproduce the issue using MSE, here is a test page https://nickdesaulniers.github.io/netfix/demo/bufferAll.html Thanks
Attachments
screenshot of the video dimension bug (63.36 KB, image/png)
2024-11-07 01:55 PST, Theo
no flags
screenshot of the expected video dimension (181.96 KB, image/png)
2024-11-07 01:56 PST, Theo
no flags
Theo
Comment 1 2024-11-07 01:55:51 PST
Created attachment 473164 [details] screenshot of the video dimension bug
Theo
Comment 2 2024-11-07 01:56:17 PST
Created attachment 473165 [details] screenshot of the expected video dimension
Philippe Normand
Comment 3 2024-11-07 10:12:13 PST
So you have a "Ignoring redundant STREAM_COLLECTION" message in the logs?
Philippe Normand
Comment 4 2024-11-07 11:00:07 PST
Oh no the message is dropped by uridecodebin3. Well, iiuc making the MSE source answer selectable queries positively would solve the issue. The mediastreamsrc element already does that, fwiw.
Theo
Comment 5 2024-11-08 00:26:42 PST
(In reply to Philippe Normand from comment #3) > So you have a "Ignoring redundant STREAM_COLLECTION" message in the logs? That's right because the message comes from decodebin3
Theo
Comment 6 2024-11-08 00:31:31 PST
(In reply to Philippe Normand from comment #4) > Oh no the message is dropped by uridecodebin3. Well, iiuc making the MSE > source answer selectable queries positively would solve the issue. > > The mediastreamsrc element already does that, fwiw. Yes it would fix the issue, I was just not sure of the meaning induced by returning true to this query (there is not much info in the documentation/code)
Philippe Normand
Comment 7 2024-11-08 00:40:12 PST
Can you send a PR?
Theo
Comment 8 2024-11-08 03:27:00 PST
(In reply to Philippe Normand from comment #7) > Can you send a PR? Yes I will do that
EWS
Comment 9 2024-11-08 09:51:44 PST
Committed 286347@main (9e9ea966373d): <https://commits.webkit.org/286347@main> Reviewed commits have been landed. Closing PR #36390 and removing active labels.
Philippe Normand
Comment 10 2024-11-15 08:13:04 PST
*** Bug 283077 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.