[GStreamer][MSE] WebkitMediaSource implement selectable query https://bugs.webkit.org/show_bug.cgi?id=282749

With the latest version of GStreamer, if the source is not selectable,
uridecodebin3 will drop the stream collection emitted from this element
As we only consider stream collection from the source element, we will
never set the stream collection internally, this will produce faulty
behaviour such as using wrong video dimensions
To avoid that, we reply true to the selectable query